# eye_of_the_sky

./: .gitignore  README.md  robot.py  socket&UI
Socket&Show/: client.py  server.py
Stereo-Vision/: MDBONE.avi  MDHOT.avi  demo  filteredDisparityMap.cpp  makefile
Stereo-Vision/2011_09_29_2/image_00/: timestamps.txt
Stereo-Vision/2011_09_29_2/image_01/: timestamps.txt
client/: CMakeLists.txt  client.cpp  client.h  main.cpp  tmp
client/com/: README.md  com.cpp  com.h  out  test.cpp
client/com/socket/: .main.cpp.swp  .soc.cpp.swp  .soc.h.swp  CMakeLists.txt  main.cpp  soc.cpp  soc.h
client/data/: mystereocalib.yml
client/detect/: .detect.cpp.swp  CMakeLists.txt  README.md  detect.cpp  detect.h  test1.cpp
client/stereo-vision/: .disparidade.cpp.swp  .stereo.cpp.swp  CMakeLists.txt  README.md  calibracao.cpp  calibracao.h  disparidade.cpp  disparidade.h  makefile  stereo.cpp  stereo.h  test  test.cpp
client/stereo-vision/config/: mystereocalib.yml
client/stero-vision/: calibracao.cpp  calibracao.h  client.cpp  client.h  demo  disparidade.cpp  disparidade.h  filteredDisparityMap.cpp  makefile  test.cpp
client/stero-vision/config/: mystereocalib.yml
detect/: HumanDetect.py  class Detection.md  test1.py  test2.py
detect_cpp/: CMakeLists.txt
server/: client_socket.py  client_web.py  server_UI.py  server_socket.py  server_web.py
server/Socket&Show/: client.py  client1.py  client8-2.py  client_UI.py  server.py  server1.py  server8-30.py  server_UI.py  web_client.py  web_server.py
server/Socket&Show/pics/: info.csv
server/pics/: info.csv
stereo/: stereo.py  stereoconfig.py
stereo_cpp/: stereo.cpp
tmp/: robot.py
tmp/detect/: test2.py
tmp/stereo/: README.md
